列出人名和电话

--- a/party_bid_1/app/assets/www/_index.haml
+++ b/party_bid_1/app/assets/www/_index.haml
@@ -12,3 +12,8 @@
   %body
     =partial 'pages'
   %script(lang="javascript" src="js/application.js")
+  %script(lang="javascript" src="lib/js/cordova/cordova-2.1.0.js")
+  %script(lang="javascript" src="lib/js/jquery/jquery-1.8.2.min.js")
+  %script(lang="javascript" src="lib/js/jquery/jquery.mobile-1.2.0.min.js")
+
+
